--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,28 +1,52 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   text-decoration: none;
+  list-style: none;
 }
-a{
+ul {
+  padding: 0;
+  margin: 0;
+}
+a {
   text-decoration: none;
   display: inline-block;
+  color: inherit;
 }
 input {
   outline: none;
 }
 body {
-  font-family: 'Rubik', sans-serif;
+  font-family: "Rubik", sans-serif;
+}
+
+.form-control::placeholder {
+  /* Chrome, Firefox, Opera, Safari 10.1+ */
+  color: rgba(0, 0, 0, 0.5);
+  opacity: 1; /* Firefox */
+}
+
+.form-control:-ms-input-placeholder {
+  /* Internet Explorer 10-11 */
+  color: rgba(0, 0, 0, 0.5);
+}
+
+.form-control::-ms-input-placeholder {
+  /* Microsoft Edge */
+  color: rgba(0, 0, 0, 0.5);
 }
 
 :root {
-  --header : #131921;
-  --hraderBorder : #3b4149;
-  --searchBg : #febd69;
-  --navBg : #232f3e;
-  --footerBg : #232f3e;
-  --bannerOrange : #bf4800;
-  --sectionBg2 : #f5f5f7;
+  --header: #131921;
+  --hraderBorder: #3b4149;
+  --searchBg: #febd69;
+  --navBg: #232f3e;
+  --footerBg: #232f3e;
+  --bannerOrange: #bf4800;
+  --sectionBg2: #f5f5f7;
+  --catBorder: #ededed;
+  --listColor: #777777;
 }
 
 .header-top-strip {
@@ -32,14 +56,14 @@ body {
 .header-upper {
   background-color: var(--header);
 }
-.header-upper .input-group-text{
+.header-upper .input-group-text {
   background-color: var(--searchBg);
 }
 .form-control:focus {
   box-shadow: none;
   border-color: inherit;
 }
-.header-upper .header-upper-links image{
+.header-upper .header-upper-links image {
   height: 35px;
   width: 35px;
 }
@@ -49,14 +73,14 @@ body {
 .nav-link {
   text-transform: uppercase;
 }
-.footer-bg{
+.footer-bg {
   background-color: var(--footerBg);
   color: lightgray;
 }
-address{
+address {
   color: lightgray;
 }
-.footer-bg li{
+.footer-bg li {
   font-size: 14px;
   line-height: 30px;
   color: lightgray;
@@ -71,9 +95,9 @@ address{
   display: flex;
   align-items: center;
   justify-content: center;
-  cursor: pointer; 
+  cursor: pointer;
 }
-.banner{
+.banner {
   position: relative;
 }
 .banner-content {
@@ -100,7 +124,7 @@ address{
 .banner-content p {
   font-size: 16px;
 }
-.s-banner{
+.s-banner {
   position: relative;
   width: 49%;
 }
@@ -125,4 +149,273 @@ address{
 }
 .home-wrapper-2 {
   background-color: var(--sectionBg2);
+}
+.categories {
+  background-color: #fff;
+  -webkit-box-shadow: 1px 1px 16px 0px rgba(209, 197, 209, 1);
+  -moz-box-shadow: 1px 1px 16px 0px rgba(209, 197, 209, 1);
+  box-shadow: 1px 1px 16px 0px rgba(209, 197, 209, 1);
+  padding: 15px;
+}
+.marquee {
+  background-color: #fff;
+  -webkit-box-shadow: 1px 1px 16px 0px rgba(209, 197, 209, 1);
+  -moz-box-shadow: 1px 1px 16px 0px rgba(209, 197, 209, 1);
+  box-shadow: 1px 1px 16px 0px rgba(209, 197, 209, 1);
+  padding: 15px;
+}
+.marquee img {
+  margin-left: 20px;
+}
+.categories > div {
+  width: 19%;
+}
+.categories > div:nth-child(1),
+.categories > div:nth-child(2),
+.categories > div:nth-child(3),
+.categories > div:nth-child(4),
+.categories > div:nth-child(5) {
+  border-bottom: 1px solid var(--catBorder);
+}
+
+.categories > div:nth-child(1),
+.categories > div:nth-child(2),
+.categories > div:nth-child(3),
+.categories > div:nth-child(4) {
+  border-right: 1px solid var(--catBorder);
+}
+
+.categories > div:nth-child(6),
+.categories > div:nth-child(7),
+.categories > div:nth-child(8),
+.categories > div:nth-child(9) {
+  border-right: 1px solid var(--catBorder);
+}
+.col-3 {
+  width: 24%;
+}
+.card {
+  overflow: hidden;
+  transition: 0.3s;
+}
+.card-title {
+  font-size: 14px;
+  color: var(--bannerOrange);
+  font-weight: 500;
+}
+.card-text {
+  font-weight: 500;
+}
+.action-bar {
+  top: 10%;
+  right: -8%;
+  transition: 0.3s;
+}
+.card:hover .action-bar {
+  right: 15px;
+}
+.wishlist-icon {
+  top: 2%;
+  right: 15px;
+}
+.card .productImg {
+  height: 270px;
+}
+.card .productImg img {
+  object-fit: contain;
+}
+.card .productImg > img:last-child {
+  display: none;
+}
+.card:hover .productImg > img:nth-child(1) {
+  display: none;
+}
+.card:hover .productImg > img:last-child {
+  display: block;
+}
+.specialCard {
+  background-color: #fff;
+  padding: 20px 10px;
+  border-radius: 10px;
+}
+.title {
+  font-weight: 500;
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.famous-card-bg {
+  border-radius: 5px;
+}
+p {
+  margin-bottom: 0;
+}
+.store-wrapper {
+  background-color: var(--sectionBg2);
+}
+.filter-card {
+  background: #fff;
+  padding: 10px 15px;
+  border-radius: 10px;
+  margin-bottom: 20px;
+  color: var(--listColor);
+}
+.filter-title {
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 30px;
+  opacity: 0.9;
+  color: #565c64;
+  margin-bottom: 15px;
+}
+.filter-card ul {
+  list-style: none;
+  line-height: 30px;
+  cursor: pointer;
+}
+.form-check {
+  margin: 15px 0;
+}
+.availiability h5 {
+  font-size: 16px;
+  font-weight: 600;
+  margin: 20px 0;
+}
+.colors li {
+  width: 25px;
+  height: 25px;
+  background-color: red;
+  border-radius: 50px;
+  margin-right: 10px;
+  display: inline-block;
+}
+.btn-light {
+  color: #565c64;
+}
+.form-check {
+  margin: 0px 5px;
+  display: inline-block;
+}
+.grid img {
+  width: 25px;
+  height: 25px;
+  background-color: #f2f2f2;
+  margin: 0 2px;
+  padding: 5px;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.gr-12 {
+  width: 100%;
+}
+.gr-6 {
+  width: 49%;
+}
+.gr-4 {
+  width: 32%;
+}
+.gr-3 {
+  width: 24%;
+}
+.stores .productImg {
+  height: auto;
+}
+.gr-12 .card {
+  display: flex;
+  flex-direction: row;
+}
+.gr-12 .card-body {
+  padding: 30px 50px;
+}
+.gr-12 .action-bar {
+  top: 15%;
+}
+.description {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  -webkit-line-clamp: 2;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 10px;
+}
+.gr-12 .description {
+  -webkit-line-clamp: 20;
+}
+.gr-12 .action-bar {
+  left: 300px;
+}
+.compare-card {
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 20px 15px;
+  border: 1px solid #c3cbd2;
+}
+.compare-card .productImg {
+  height: 270px;
+  background-position: center center;
+}
+.compare-card .productImg img {
+  object-fit: contain;
+}
+.compare-card .cross {
+  top: 5%;
+  width: 5%;
+  right: 5%;
+}
+.desc {
+  padding: 15px 0px;
+  border-top: 1px solid #c3cbd2;
+}
+.desc p {
+  font-weight: 500;
+}
+.p20 {
+  padding: 15px 0;
+}
+.login-card {
+  background-color: #fff;
+  border-radius: 10px;
+  padding: 20px 15px;
+  border: 1px solid #c3cbd2;
+  width: 500px;
+  margin: 100px auto;
+}
+.strike {
+  text-align: center;
+  position: relative;
+  top: 5px;
+  padding-top: 1px;
+  margin-bottom: 14px;
+  line-height: 0;
+}
+.strike::after {
+  content: "";
+  width: 100%;
+  background-color: transparent;
+  display: block;
+  height: 1px;
+  border-top: 1px solid #e7e7e7;
+  position: absolute;
+  top: 50%;
+  margin-top: -1px;
+  z-index: 1;
+}
+.strike h6 {
+  line-height: 1;
+  font-size: 14px;
+  color: #767676;
+  font-weight: 400;
+  z-index: 2;
+  position: relative;
+  display: inline-block;
+  background-color: #fff;
+  padding: 0 8px 0 7px;
+}
+.signUp {
+  margin-top: 30px;
+}
+.forgot {
+  color: #0066c0;
 }
