--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -419,3 +419,14 @@ p {
 .forgot {
   color: #0066c0;
 }
+.reset {
+  font-size: 16px;
+  text-align: center;
+  margin-bottom: 30px;
+  color: #767676;
+}
+.single-product-wrapper{
+  background-color: #fff;
+  padding: 20px 10px;
+  border-radius: 10px;
+}
